--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"云间",
+    "subTitle":"个人信息集散地",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last",
+    "startSite":"07/18/2024",
+    "onePageListNum":15,
+    "showPostSource":0
 }
